--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dentistry</title>
+    <title>Dental studio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body>  
-<header> 
+<header id="menu"> 
   <div class="header ">
     <hr class="head-hr">
     <div class="row align-items-center header-top">
@@ -122,19 +122,26 @@
     </svg>
 </div>
 <div class="col-xl-2 col-md-4 col-sm-3 head_address">
-    <span style="color: #11B9ED;">Киев</span>
-    <p><span>Одесса</span> Фонтанская дорого 95 д.
+    <span onclick="changeCity()" style="color: #11B9ED;">Киев</span>
+    <p><span style=" text-decoration-line: underline;">Одесса</span> Фонтанская дорого 95 д.
         Район 10-я станция Большого фонтана</p>
+</div>
+<div id="odessa" style="display: none;" class="col-xl-2 col-md-4 col-sm-3 head_address">
+  <span onclick="changeCityKyiv()"style="color: #11B9ED;">Одесса</span>
+  <p><span style=" text-decoration-line: underline;">Киев</span>  м. Нивки, ул. Черняховского, 18</p>
 </div>
 <div class="col-xl-2 col-md-3 col-sm-4 align-self-center head_contact">
     <h5>+ 38 (073) 310-10-10</h5>
   <p>Ежедневно: 09:00-21:00</p>
 </div>
 <div class="col-xl-2 col-md-2 col-sm-3 block_network">
+  <a href="">
     <svg  class="svg_network" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M40 20C40 8.95312 31.0469 0 20 0C8.95312 0 0 8.95312 0 20C0 31.0469 8.95312 40 20 40C20.1172 40 20.2344 40 20.3516 39.9922V24.4297H16.0547V19.4219H20.3516V15.7344C20.3516 11.4609 22.9609 9.13281 26.7734 9.13281C28.6016 9.13281 30.1719 9.26562 30.625 9.32812V13.7969H28C25.9297 13.7969 25.5234 14.7812 25.5234 16.2266V19.4141H30.4844L29.8359 24.4219H25.5234V39.2266C33.8828 36.8281 40 29.1328 40 20Z" fill="#2F80ED"/>
         </svg>
-     <svg class="svg-inst" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+   </a>
+  <a href="">  
+    <svg class="svg-inst" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="40" height="40">
             <circle cx="20" cy="20" r="20" fill="#C4C4C4"/>
             </mask>
@@ -149,7 +156,8 @@
             <stop offset="1" stop-color="#C837AB"/>
             </linearGradient>
             </defs>
-    </svg>     
+    </svg>   
+  </a>  
 </div>
 <div class="col-xl-1 col-md-3 col-sm-2 head_online">
     <button>
@@ -157,23 +165,28 @@
     </button>
 </div>
 </div>
-<ul class="menu-items">
-    <li><a href="">Услуги</a></li>
-    <li><a href="">Почему мы</a></li>
-    <li><a href="">Наша команда</a></li>
-    <li><a href="">Цены</a></li>
-    <li><a href="">Контакты</a></li>
-    <li  class="language">Рус<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M6.00018 9.91421L12.0106 15.9246L18.021 9.91422L17.021 9L12.0106 14.0962L7.021 9L6.00018 9.91421Z" fill="#202020" stroke="#202020" stroke-width="0.5"/>
-        </svg>
+<ul id="menu-elem" class="menu-items">
+    <li><a href="#1">Услуги</a></li>
+    <li><a href="#2">Почему мы</a></li>
+    <li><a href="#3">Наша команда</a></li>
+    <li><a class="pr-href" onclick="window.location.href='/price.html'">Цены</a></li>
+    <li><a href="#4">Контакты</a></li>
+    <li onmouseover="langShow()" onmouseout="langHide()" class="language">
+      <span class="rus-lang" >Рус
+        <svg class="arrow-lang" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M6.00018 9.91421L12.0106 15.9246L18.021 9.91422L17.021 9L12.0106 14.0962L7.021 9L6.00018 9.91421Z" fill="#202020" stroke="#202020" stroke-width="0.5"/>
+      </svg>
+    </span>
+        <div class="ukr-lang">Укр</div>
         </li>
-        
+       
 </ul>
+
 <div class="burger">
   <div id="myNav" class="overlay">
-    <div class="overlay-content">
-      <a id="closeNavB" onclick="closeNav()">
-        <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <div id="burger-elem" class="overlay-content">
+      <span id="closeNavB" onclick="closeNav()">
+        <svg width="17" height="17" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(../../#clip0)">
             <rect x="0.192383" y="20.6985" width="29" height="3" transform="rotate(-45 0.192383 20.6985)"
               fill="black" />
@@ -187,13 +200,13 @@
           </defs>
         </svg>
 
-      </a>
-      <a>Услуги</a>
-      <a>Почему мы</a>
-      <a>Наша команда</a>
-      <a>Цены</a>
-      <a>Контакты</a>
-      <a><span style="color: #BDBDBD;">Рус</span><span>Укр</span></a>
+      </span>
+      <a onclick="closeNav()" href="#1">Услуги</a>
+      <a onclick="closeNav()" href="#2">Почему мы</a>
+      <a onclick="closeNav()" href="#3">Наша команда</a>
+      <a onclick="window.location.href='/price.html'">Цены</a>
+      <a onclick="closeNav()" href="#4">Контакты</a>
+      <a><span style="color: #BDBDBD; margin-right: 20px;">Рус</span><span>Укр</span></a>
    
     </div>
   </div>
@@ -214,7 +227,7 @@
 <main>
     <section>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
+            <ol id="for-mobile" class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -277,7 +290,8 @@
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span    aria-hidden="true"><svg width="48" height="80" viewBox="0 0 48 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <span  aria-hidden="true">
+                <svg width="48" height="80" viewBox="0 0 48 80" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="48" height="80" fill="#333333" fill-opacity="0.1"/>
                 <path d="M31.4142 23L14.4142 40L31.4142 57L34 54.1716L19.5858 40L34 25.8873L31.4142 23Z" fill="white"/>
                 </svg>
@@ -294,7 +308,7 @@
             </a>
           </div>
     </section>
- <section class="our-services">
+ <section id="1" class="our-services">
  <div  class="container-block">
       <div class="text-services">   
         <h3><svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -379,7 +393,7 @@
   </div>
 </div>
 </section>
-<section class="why-we">
+<section id="2" class="why-we">
   <div  class="container-block">
        <div class="text-services">   
          <h3><svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -481,7 +495,7 @@
      </div>
  </div>
  </section>
- <section class="our-team">
+ <section id="3" class="our-team">
   <div  class="container-block">
     <div class="text-services">   
       <h3><svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -630,7 +644,7 @@
        с 9:00 до 18:00 без выходных</p>
     </div>
     <div class="col-lg-2 call-btn-team">
-      <a>
+      <a href="">
         Обратный звонок
     </a>
   </div>
@@ -638,7 +652,7 @@
   </div>
  </section>  
 </main>
-<footer>
+<footer id="4">
   <div class="container-block">
     <div class="row box_texting align-items-start">
     <div class="col-md-5 col-sm-4">
@@ -652,8 +666,8 @@
         <li><a href="">Стоматологический туризм</a></li>
       </ul>
     <div class="footer-pr">
-      <a class="price-a">Цены</a><br><br>
-      <a>Контакти</a>
+      <a href="" class="price-a">Цены</a><br><br>
+      <a href="">Контакти</a>
     </div>
     </div>
     <div class="col-md-4 col-sm-5 adapt_block-cont">
@@ -670,7 +684,7 @@
       <p>Ежедневно: 09:00-21:00</p>
     </div>
       <div class="adapt_btn call-btn-team">
-        <a>
+        <a href="">
           Онлайн запись
         </a>
     </div>
@@ -678,9 +692,12 @@
     <div class="col-md-3 col-sm-3 last-items-footer">
       <h4>Мы в соцсетях</h4>
       <div class="box-social">
+      <a href="">
         <svg class="svg-facebook" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M40 20C40 8.95312 31.0469 0 20 0C8.95312 0 0 8.95312 0 20C0 31.0469 8.95312 40 20 40C20.1172 40 20.2344 40 20.3516 39.9922V24.4297H16.0547V19.4219H20.3516V15.7344C20.3516 11.4609 22.9609 9.13281 26.7734 9.13281C28.6016 9.13281 30.1719 9.26562 30.625 9.32812V13.7969H28C25.9297 13.7969 25.5234 14.7812 25.5234 16.2266V19.4141H30.4844L29.8359 24.4219H25.5234V39.2266C33.8828 36.8281 40 29.1328 40 20Z" fill="#2F80ED"/>
             </svg>
+    </a>
+     <a href=""> 
          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="40" height="40">
                 <circle cx="20" cy="20" r="20" fill="#C4C4C4"/>
@@ -696,10 +713,11 @@
                 <stop offset="1" stop-color="#C837AB"/>
                 </linearGradient>
                 </defs>
-        </svg>         
+        </svg>    
+      </a>     
     </div>
 <div class="privicy-box">
-  <a>Политика конфиденциальности</a>
+  <a href="">Политика конфиденциальности</a>
   <p>© DENTAL STUDIO, 2020 - все права сохранены</p>
 </div>
 
@@ -707,6 +725,7 @@
     </div>
   </div>
 </footer>
+
 <script src="assets/js/app.js"></script>
 </body>
 </html>
