--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <li><a href="#1">Услуги</a></li>
     <li><a href="#2">Почему мы</a></li>
     <li><a href="#3">Наша команда</a></li>
-    <li><a class="pr-href" onclick="window.location.href='/price.html'">Цены</a></li>
+    <li><a class="pr-href" onclick="window.location.href='/Dental-studio/price.html'">Цены</a></li>
     <li><a href="#4">Контакты</a></li>
     <li onmouseover="langShow()" onmouseout="langHide()" class="language">
       <span class="rus-lang" >Рус
