new href location

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <a onclick="closeNav()" href="#1">Услуги</a>
       <a onclick="closeNav()" href="#2">Почему мы</a>
       <a onclick="closeNav()" href="#3">Наша команда</a>
-      <a onclick="window.location.href='/price.html'">Цены</a>
+      <a onclick="window.location.href='/Dental-studio/price.html'">Цены</a>
       <a onclick="closeNav()" href="#4">Контакты</a>
       <a><span style="color: #BDBDBD; margin-right: 20px;">Рус</span><span>Укр</span></a>
    
