--- a/price.html
+++ b/price.html
@@ -13,7 +13,7 @@
     <div class="header">
       <hr class="head-hr">
       <div class="row align-items-center header-top">
-  <div onclick="window.location.href='/index.html'" class="col-xl-4 col-md-4 col-sm-6"><svg class="logotip-svg" width="440" height="80" viewBox="0 0 440 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <div onclick="window.location.href='/Dental-studio/index.html'" class="col-xl-4 col-md-4 col-sm-6"><svg class="logotip-svg" width="440" height="80" viewBox="0 0 440 80" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M181.057 10.1128C181.734 19.3212 189.318 29.8567 189.318 29.8567C189.318 29.8567 180.245 22.1108 178.105 13.8503C175.965 5.58988 179.297 3.58571 183.305 2.25862C187.313 0.931525 193.028 1.85237 198.905 3.99196C204.782 6.13156 210.118 5.58988 210.118 5.58988C210.118 5.58988 205.73 8.37948 197.984 6.26697C190.238 4.15446 188.397 4.12738 185.986 4.39821C183.82 4.61488 180.813 6.51072 181.057 10.1128Z" fill="url(#paint0_linear)"/>
       <path d="M197.741 0.6336C197.741 0.6336 214.262 -1.23516 219.597 1.4461C224.932 4.10029 229.726 7.05238 226.53 15.8545C223.335 24.6566 211.607 34.0005 203.32 38.2526C195.032 42.5047 187.313 49.1943 187.584 61.4631C187.855 73.7319 196.386 79.3382 209.441 79.609C206.786 79.8799 196.386 81.7486 189.697 74.0028C183.007 66.2569 181.436 52.3901 193.163 41.4755C204.891 30.5338 209.17 34.2713 220.626 18.5358C226.53 9.43573 225.745 0.6336 197.741 0.6336Z" fill="url(#paint1_linear)"/>
       <path d="M197.199 43.8318C197.199 43.8318 208.926 44.3734 208.926 40.9067C209.738 41.7192 213.205 44.9151 206.001 44.6443C198.797 44.3734 197.199 43.8318 197.199 43.8318Z" fill="url(#paint2_linear)"/>
@@ -166,11 +166,11 @@
   </div>
   </div>
   <ul id="menu-elem" class="menu-items">
-      <li><a class="pr-href" onclick="window.location.href='/index.html#1'">Услуги</a></li>
-      <li><a class="pr-href"  onclick="window.location.href='/index.html#2'" href="#2">Почему мы</a></li>
-      <li><a class="pr-href"  onclick="window.location.href='/index.html#3'" href="#3">Наша команда</a></li>
+      <li><a class="pr-href" onclick="window.location.href='/Dental-studio/index.html#1'">Услуги</a></li>
+      <li><a class="pr-href"  onclick="window.location.href='/Dental-studio/index.html#2'"  >Почему мы</a></li>
+      <li><a class="pr-href"  onclick="window.location.href='/Dental-studio/index.html#3'"  >Наша команда</a></li>
       <li><a class="pr-href" href="#6">Цены</a></li>
-      <li><a class="pr-href"  onclick="window.location.href='/index.html#4'" href="#4">Контакты</a></li>
+      <li><a class="pr-href" href="#7">Контакты</a></li>
       <li onmouseover="langShow()" onmouseout="langHide()" class="language">
         <span class="rus-lang" >Рус
           <svg class="arrow-lang" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -201,9 +201,9 @@
           </svg>
   
         </span>
-        <a onclick="window.location.href='/index.html#1'">Услуги</a>
-        <a onclick="window.location.href='/index.html#2'" >Почему мы</a>
-        <a onclick="window.location.href='/index.html#3'">Наша команда</a>
+        <a onclick="window.location.href='/Dental-studio/index.html#1'">Услуги</a>
+        <a onclick="window.location.href='/Dental-studio/index.html#2'" >Почему мы</a>
+        <a onclick="window.location.href='/Dental-studio/index.html#3'">Наша команда</a>
         <a href="#6" onclick="closeNav()">Цены</a>
         <a href="#7" onclick="closeNav()">Контакты</a>
         <a><span style="color: #BDBDBD; margin-right: 20px;">Рус</span><span>Укр</span></a>
