general text on price

--- a/price.html
+++ b/price.html
@@ -239,7 +239,7 @@
         </clipPath>
         </defs>
         </svg>  
-        <a href="/index.html">Главная</a> 
+        <a href="/Dental-studio/index.html">Главная</a> 
         <svg class="svg-arrow" width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M3.11887 7.37619L3.74264 7.99997L6.86154 4.88107L6.86157 4.8811L7.48535 4.25733L3.74271 0.514691L3.11894 1.13846L6.23777 4.2573L3.11887 7.37619Z" fill="#535353"/>
             </svg>
