add block with text

--- a/price.html
+++ b/price.html
@@ -227,6 +227,7 @@
  
 <section>
   <div  class="container-block cont-block-price">
+ 
      <div class="general-page">
          <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0)">
@@ -244,6 +245,14 @@
             <path fill-rule="evenodd" clip-rule="evenodd" d="M3.11887 7.37619L3.74264 7.99997L6.86154 4.88107L6.86157 4.8811L7.48535 4.25733L3.74271 0.514691L3.11894 1.13846L6.23777 4.2573L3.11887 7.37619Z" fill="#535353"/>
             </svg>
             <span>Цени</span>
+            <div class="text-services">   
+   
+              <h2>Lorem ipsum dolor sit </h2>
+              <p style="text-transform: none;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi exercitationem voluptatum consequuntur nihil laborum incidunt dicta esse repellendus aspernatur, facere fuga itaque? Placeat nisi reprehenderit corrupti. Iste, perspiciatis? Provident, eius.
+              Eaque, illo ipsam laudantium excepturi accusamus sed! Aperiam, magnam! Nisi blanditiis, saepe quae quas quod ratione praesentium dolore est officiis possimus dolorem voluptatibus, architecto ipsam. Quasi, officia? Eveniet, dicta iusto.
+              Autem, quibusdam aliquam perspiciatis rerum deserunt dolores sapiente provident dignissimos enim, sed fuga minus? Voluptas cumque delectus illum. Eius pariatur provident voluptates assumenda sed doloribus perferendis quos excepturi magnam laboriosam.
+              </p>
+          </div>
     </div>
     <div>
                  <div id="6">
