--- a/price.html
+++ b/price.html
@@ -160,7 +160,7 @@
     </a>  
   </div>
   <div class="col-xl-1 col-md-3 col-sm-2 head_online">
-      <button>
+      <button type="button"  data-toggle="modal" data-target="#exampleModal">
           Онлайн запись
       </button>
   </div>
@@ -227,7 +227,6 @@
  
 <section>
   <div  class="container-block cont-block-price">
- 
      <div class="general-page">
          <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0)">
@@ -432,7 +431,35 @@
     </div>
  </div>
  </section>
-   
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Онлайн запись</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">
+                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.32844 7.50077L14.8281 1.00104C15.057 0.772199 15.057 0.401184 14.8281 0.172376C14.5993 -0.0564324 14.2283 -0.0564617 13.9995 0.172376L7.49975 6.67211L1.00004 0.172376C0.771207 -0.0564617 0.400192 -0.0564617 0.171384 0.172376C-0.0574242 0.401213 -0.0574535 0.772228 0.171384 1.00104L6.67109 7.50074L0.171384 14.0005C-0.0574535 14.2293 -0.0574535 14.6003 0.171384 14.8291C0.285788 14.9435 0.435758 15.0007 0.585729 15.0007C0.735699 15.0007 0.885641 14.9435 1.00007 14.8291L7.49975 8.32943L13.9995 14.8291C14.1139 14.9435 14.2638 15.0007 14.4138 15.0007C14.5638 15.0007 14.7137 14.9435 14.8281 14.8291C15.057 14.6003 15.057 14.2293 14.8281 14.0005L8.32844 7.50077Z" fill="#202020"/>
+                </svg>
+                </span>
+            </button>
+          </div>
+          <div class="modal-body">
+          <form>
+            <input type="text" placeholder="Имя" required><br>
+            <input type="tel" placeholder="Телефонный номер" required><br>
+            <button>Отправить</button>
+          </form>
+          </div>
+          <!-- <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div> -->
+        </div>
+      </div>
+    </div>
+    
 </main>
 <footer id="7">
   <div class="container-block">
@@ -447,7 +474,6 @@
         <li><a href="">Протезирование зубов</a></li>
         <li><a href="">Стоматологический туризм</a></li>
       </ul>
-  
     </div>
     <div class="col-md-4 col-sm-5 adapt_block-cont">
         <h4>Контакти</h4>
@@ -462,21 +488,19 @@
       <h5>+ 38 (073) 310-10-10</h5>
       <p>Ежедневно: 09:00-21:00</p>
     </div>
-      <div id="for-mobile" class="adapt_btn call-btn-team">
-        <a href="">
+      <button class="adapt_btn call-btn-team" type="button"  data-toggle="modal" data-target="#exampleModal">
           Онлайн запись
-        </a>
-    </div>
+    </button>
     </div>
     <div class="col-md-3 col-sm-3 last-items-footer">
       <h4>Мы в соцсетях</h4>
       <div class="box-social">
-        <a  style="text-decoration: none;" href=""> 
+      <a style="text-decoration: none;" href="">
         <svg class="svg-facebook" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M40 20C40 8.95312 31.0469 0 20 0C8.95312 0 0 8.95312 0 20C0 31.0469 8.95312 40 20 40C20.1172 40 20.2344 40 20.3516 39.9922V24.4297H16.0547V19.4219H20.3516V15.7344C20.3516 11.4609 22.9609 9.13281 26.7734 9.13281C28.6016 9.13281 30.1719 9.26562 30.625 9.32812V13.7969H28C25.9297 13.7969 25.5234 14.7812 25.5234 16.2266V19.4141H30.4844L29.8359 24.4219H25.5234V39.2266C33.8828 36.8281 40 29.1328 40 20Z" fill="#2F80ED"/>
             </svg>
-          </a>
-        <a href=""> 
+    </a>
+     <a href=""> 
          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="40" height="40">
                 <circle cx="20" cy="20" r="20" fill="#C4C4C4"/>
@@ -492,8 +516,8 @@
                 <stop offset="1" stop-color="#C837AB"/>
                 </linearGradient>
                 </defs>
-        </svg>  
-      </a>       
+        </svg>    
+      </a>     
     </div>
 <div class="privicy-box">
   <a href="">Политика конфиденциальности</a>
